<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Matrix and Complex numbers</string>
    <string name="action_settings">Settings</string>
    <string name="matrix_button">Matrix operations</string>
    <string name="complex_button">Operations on complex numbers</string>
    <string name="equation_button">Solve system of linear equations</string>
    <string name="exit_button">Exit</string>

    <color name="black">#000000</color>
    <color name="silver">#D3D3D3</color>
    <color name="white">#ffffff</color>

    <string name="title_activity_matrix_operations">MatrixOperations</string>
    <string name="det_button">Determinant</string>
    <string name="inv_button">Inverse matrix</string>
    <string name="trans_button">Transpose matrix</string>
    <string name="trace_button">Matrix trace</string>
    <string name="rank_button">Matrix rank</string>
    <string name="title_activity_matrix_list">MatrixList</string>
    <string name="dxd_button">Matrix 2x2</string>
    <string name="txt_button">Matrix 3x3</string>
    <string name="cxc_button">Matrix 4x4</string>
    <string name="pxp_button">Mactrix 5x5</string>
    <string name="title_activity_matrix2x2">Matrix 2x2</string>
    <string name="detmatr_button">Calculate</string>
    <string name="title_activity_matrix3x3">Matrix 3x3</string>
    <string name="title_activity_matrix4x4">Matrix 4x4</string>
    <string name="title_activity_matrix5x5">Matrix 5x5</string>
    <string name="title_activity_complex_operations">ComplexOperations</string>
    <string name="multiply_button">Multiply two complex number</string>
    <string name="div_button">Divide one number by another</string>
    <string name="pow_button">De Moivres formula (power 1,2,3..)</string>
    <string name="conv_button">From canonical to polar</string>
    <string name="title_activity_complex_interface">ComplexInterface</string>
    <string name="fsttext">First number:</string>
    <string name="ssttext">Second number:</string>
    <string name="retext">Real part</string>
    <string name="imtext">Imag part</string>
    <string name="restext">Result:</string>
    <string name="title_activity_complex_exponential">ComplexExponential</string>
    <string name="reetext">Complex number</string>
    <string name="sssttext">Power ( integer > 1)</string>
    <string name="title_activity_complex_conversion">ComplexConversion</string>
    <string name="reeetext">Canonical/Polar</string>
    <string name="retextt">Re/Mod</string>
    <string name="retexttt">Im/Arg(Mod)</string>
    <string name="retofi_button">Canonical do polar</string>
    <string name="fitore_button">Polar do canonical</string>
    <string name="title_activity_equation_system">EquationSystem</string>
    <string name="esdxd_button">System 2x2</string>
    <string name="estxt_button">System 3x3</string>
    <string name="escxc_button">System 4x4</string>
    <string name="espxp_button">System 5x5</string>
    <string name="title_activity_systemw2">System 2x2</string>
    <string name="title_activity_systemw3">System 3x3</string>
    <string name="title_activity_systemw4">System 4x4</string>
    <string name="title_activity_systemw5">System 5x5</string>
    
    <string name="title">Ax=b</string>
    <string name="title2">Matrix A:</string>
    <string name="title3">Vector b:</string>

</resources>
