<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatrixOperations" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.16" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/det"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/det_button" 
                style="@style/MyButtonView"/>

            <Button
                android:id="@+id/inv"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/inv_button" 
                style="@style/MyButtonView"/>
         
           <Button
                android:id="@+id/trans"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/trans_button" 
                style="@style/MyButtonView"/>

            <Button
                android:id="@+id/trace"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/trace_button" 
                style="@style/MyButtonView"/>

            <Button
                android:id="@+id/rank"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/rank_button" 
                style="@style/MyButtonView"/>

 
        </LinearLayout>
    </ScrollView>

</LinearLayout>