<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ComplexOperations" 
    android:background="@color/black">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
             <Button
        android:id="@+id/multiplyNumbers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply_button" 
        style="@style/MyButtonView"/>
    <Button
        android:id="@+id/divideNumbers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/div_button" 
		style="@style/MyButtonView"/>
        <Button
            android:id="@+id/powNumbers"
            style="@style/MyButtonView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/pow_button" />
        <Button
            android:id="@+id/converseNumbers"
            style="@style/MyButtonView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/conv_button" />
            
        </LinearLayout>
    </ScrollView>
     
</LinearLayout>
