<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatrixList" 
    android:background="@color/black">

<ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.16" >

     <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >


           <Button
               android:id="@+id/dxd"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/dxd_button" />

           <Button
               android:id="@+id/txt"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/txt_button" />

           <Button
               android:id="@+id/cxc"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/cxc_button" />

           <Button
               android:id="@+id/pxp"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/pxp_button" />

       </LinearLayout>

    </ScrollView>

</LinearLayout>
