<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EquationSystem" 
    android:background="@color/black">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
                      <Button
               android:id="@+id/esdxd"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/esdxd_button" />

           <Button
               android:id="@+id/estxt"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/estxt_button" />

           <Button
               android:id="@+id/escxc"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/escxc_button" />

           <Button
               android:id="@+id/espxp"
               style="@style/MyButtonView"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:text="@string/espxp_button" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
