<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ComplexInterface" 
    android:background="@color/black">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView8" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/fsttext" 
    android:textColor="@color/white"/>
 
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >
		
    <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView9" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/retext" 
    android:textColor="@color/white"
    android:layout_marginRight="40dp"/>
    
    <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView10" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/imtext"
    android:textColor="@color/white"
    android:layout_marginLeft="40dp"/>

	</TableRow>
	
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" 
    android:layout_marginTop="10dp">
		
	    <EditText android:id="@+id/renum1" 
	        android:layout_width="100dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginRight="45dp"

	        />
	
	    <EditText android:id="@+id/imnum1" 
	        android:layout_width="100dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="45dp"
	/>
	</TableRow>
	   <TextView 
    android:layout_marginTop="30dp"
    android:id="@+id/textView7" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/ssttext" 
    android:textColor="@color/white"/>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >
		
    <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView16" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/retext" 
    android:textColor="@color/white"
    android:layout_marginRight="40dp"/>
    
    <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView15" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/imtext"
    android:textColor="@color/white"
    android:layout_marginLeft="40dp"/>

	</TableRow>
   <TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" 
    android:layout_marginTop="10dp">
		
	    <EditText android:id="@+id/renum2" 
	        android:layout_width="100dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginRight="45dp"

	        />
	
	    <EditText android:id="@+id/imnum2" 
	        android:layout_width="100dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="45dp"
	/>
	</TableRow>  
	    <TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" 
    android:layout_marginTop="10dp">
		
        <Button
            android:id="@+id/calculate"
            style="@style/MyButtonView"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/detmatr_button" />
	</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" 
    android:layout_marginTop="10dp">
		
    <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView6" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/restext" 
    android:textColor="@color/white"
    android:layout_marginRight="40dp"/>

	</TableRow>  

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >
	
    <TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView12" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:textColor="@color/white"
    android:layout_marginLeft="40dp"/>

	</TableRow>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
