<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Systemw3" 
    android:background="@color/black">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
                <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2" 
        android:textColor="@color/white"/>

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >
		
	    	    <EditText android:id="@+id/M3a11" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"   
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginRight="10dp"

	        />
	
	    <EditText android:id="@+id/M3a12" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        
	        />
	        <EditText android:id="@+id/M3a13" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        
	        />
	</TableRow>
	
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center" >
		
	    	    <EditText android:id="@+id/M3a21" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"   
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginRight="10dp"

	        />
	
	    <EditText android:id="@+id/M3a22" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        
	        />
	        <EditText android:id="@+id/M3a23" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        
	        />
	</TableRow>
	
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center" >
		
	    <EditText android:id="@+id/M3a31" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"   
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginRight="10dp"

	        />
	
	    <EditText android:id="@+id/M3a32" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        
	        />
	        <EditText android:id="@+id/M3a33" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        
	        />
	</TableRow>

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title3" 
    android:textColor="@color/white"/>

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >
		
	    	    <EditText android:id="@+id/M3b1" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"   
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginRight="10dp"

	        />
	
	    <EditText android:id="@+id/M3b2" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        
	        />
	        <EditText android:id="@+id/M3b3" 
	        android:layout_width="40dp" 
	        android:layout_height="wrap_content"  
	        android:inputType="phone" 
	        android:background="@color/white"
	        android:layout_marginLeft="10dp"
	        
	        />
	</TableRow>

   <Button
       		android:layout_marginTop="10dp"
            android:id="@+id/calc33"
            style="@style/MyButtonView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/detmatr_button" />
   
   

<TextView 
    android:layout_marginTop="5dp"
    android:id="@+id/textView33" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:textColor="@color/white"/>
            
        </LinearLayout>
    </ScrollView>

</TableLayout>
